update with latex_paper

--- a/tex_example/renamed_table.tex
+++ b/tex_example/renamed_table.tex
@@ -1,26 +1,26 @@
 \begin{tabular}{lccccc}
-\hline
+\toprule
  & \multicolumn{2}{c}{\parboxc{c}{0.6cm}{first two}}& \multicolumn{3}{c}{\parboxc{c}{0.6cm}{last three}} \\
 
  \cmidrule(lr){2-3}\cmidrule(lr){4-6}
 
-{} &      \parboxc{c}{0.6cm}{(1)} & \parboxc{c}{0.6cm}{(2)} &      \parboxc{c}{0.6cm}{(3)} &      \parboxc{c}{0.6cm}{(4)} &      \parboxc{c}{0.6cm}{(5)} \\
-\hline
-main variable   &           \phantom{*}0.297** &      \phantom{*}0.302** &            \phantom{*}0.275* &            \phantom{*}0.275* &            \phantom{*}0.275* \\
-                &           (0.003)\phantom{*} &      (0.001)\phantom{*} &            (0.01)\phantom{*} &            (0.01)\phantom{*} &            (0.01)\phantom{*}\smallskip \\
-D               &                          (-) &        \phantom{*}0.016 &                          (-) &                          (-) &                          (-) \\
-                &                          (-) &                  (0.86) &                          (-) &                          (-) &                          (-)\smallskip \\
-$\gamma$        &            \phantom{*}0.279* &      \phantom{*}0.284** &           \phantom{*}0.288** &           \phantom{*}0.288** &           \phantom{*}0.288** \\
-                &                      (0.011) &      (0.01)\phantom{**} &           (0.01)\phantom{**} &           (0.01)\phantom{**} &           (0.01)\phantom{**}\smallskip \\
-B               &  \phantom{*}0.072\phantom{*} &        \phantom{*}0.058 &  \phantom{*}0.059\phantom{*} &  \phantom{*}0.059\phantom{*} &  \phantom{*}0.059\phantom{*} \\
-                &                      (0.464) &                  (0.56) &                      (0.553) &                      (0.553) &                      (0.553) \\
-\smallskip\\
-area FE         &                          Yes &                     Yes &                          Yes &                          Yes &                          Yes \\
-I FE            &                          Yes &                      No &                           No &                          Yes &                          Yes \\
-\smallskip\\
-Market controls &                            3 &                       1 &                            5 &                            1 &                            2 \\
-\smallskip\\
-Observations    &                          100 &                     100 &                          100 &                          100 &                          100 \\
-$R^2$           &                         0.06 &                    0.04 &                         0.03 &                         0.03 &                         0.03 \\
-\hline
+{} &       \parboxc{c}{0.6cm}{(1)} &       \parboxc{c}{0.6cm}{(2)} & \parboxc{c}{0.6cm}{(3)} & \parboxc{c}{0.6cm}{(4)} & \parboxc{c}{0.6cm}{(5)} \\
+\midrule
+main variable   &          \phantom{*}0.2974*** &          \phantom{*}0.3024*** &     \phantom{*}0.2746** &     \phantom{*}0.2746** &     \phantom{*}0.2746** \\
+                &          (3.0797)\phantom{**} &          (3.3618)\phantom{**} &     (2.6245)\phantom{*} &     (2.6245)\phantom{*} &     (2.6245)\phantom{*}\smallskip \\
+D               &                               &  \phantom{*}0.0163\phantom{*} &                         &                         &                         \\
+                &                               &                      (0.1769) &                         &                         &                        \smallskip \\
+$\gamma$        &           \phantom{*}0.2789** &          \phantom{*}0.2842*** &    \phantom{*}0.2878*** &    \phantom{*}0.2878*** &    \phantom{*}0.2878*** \\
+                &           (2.5905)\phantom{*} &          (2.629)\phantom{***} &    (2.6386)\phantom{**} &    (2.6386)\phantom{**} &    (2.6386)\phantom{**}\smallskip \\
+B               &  \phantom{*}0.0724\phantom{*} &  \phantom{*}0.0578\phantom{*} &       \phantom{*}0.0594 &       \phantom{*}0.0594 &       \phantom{*}0.0594 \\
+                &                      (0.7357) &                      (0.5856) &                 (0.595) &                 (0.595) &                 (0.595) \\
+\medskip\\
+area FE         &                           Yes &                           Yes &                     Yes &                     Yes &                     Yes \\
+I FE            &                           Yes &                            No &                      No &                     Yes &                     Yes \\
+\medskip\\
+Market controls &                             3 &                             1 &                       5 &                       1 &                       2 \\
+\medskip\\
+Observations    &                           100 &                           100 &                     100 &                     100 &                     100 \\
+$R^2$           &                        0.0568 &                        0.0405 &                  0.0328 &                  0.0328 &                  0.0328 \\
+\bottomrule
 \end{tabular}
