--- a/tex_example/bottom_blocks.tex
+++ b/tex_example/bottom_blocks.tex
@@ -1,18 +1,18 @@
 \begin{tabular}{lccccc}
-\hline
+\toprule
  & \multicolumn{3}{c}{\parboxc{c}{0.6cm}{21 firms}}& \multicolumn{2}{c}{\parboxc{c}{0.6cm}{Five firm only}} \\
 
  \cmidrule(lr){2-4}\cmidrule(lr){5-6}
 
-{} & \parboxc{c}{0.6cm}{(1)} & \parboxc{c}{0.6cm}{(2)} & \parboxc{c}{0.6cm}{(3)} & \parboxc{c}{0.6cm}{(4)} & \parboxc{c}{0.6cm}{(5)} \\
-\hline
-D               &                     (-) &        \phantom{*}0.016 &                     (-) &                     (-) &                     (-) \\
-                &                     (-) &                  (0.86) &                     (-) &                     (-) &                     (-) \\
-\smallskip\\
-area FE         &                     Yes &                     Yes &                     Yes &                     Yes &                     Yes \\
-I FE            &                     Yes &                      No &                      No &                     Yes &                     Yes \\
-\smallskip\\
-Market controls &                       3 &                       1 &                       5 &                       1 &                       2 \\
-Nb Firm         &                      21 &                      21 &                      21 &                       5 &                       5 \\
-\hline
+{} & \parboxc{c}{0.6cm}{(1)} &       \parboxc{c}{0.6cm}{(2)} & \parboxc{c}{0.6cm}{(3)} & \parboxc{c}{0.6cm}{(4)} & \parboxc{c}{0.6cm}{(5)} \\
+\midrule
+D               &                         &  \phantom{*}0.0163\phantom{*} &                         &                         &                         \\
+                &                         &                      (0.1769) &                         &                         &                         \\
+\medskip\\
+area FE         &                     Yes &                           Yes &                     Yes &                     Yes &                     Yes \\
+I FE            &                     Yes &                            No &                      No &                     Yes &                     Yes \\
+\medskip\\
+Market controls &                       3 &                             1 &                       5 &                       1 &                       2 \\
+Nb Firm         &                      21 &                            21 &                      21 &                       5 &                       5 \\
+\bottomrule
 \end{tabular}
