start the didi pack extended universe

--- a/tex_example/new_parameters.tex
+++ b/tex_example/new_parameters.tex
@@ -4,23 +4,23 @@
 
  \cmidrule(lr){2-3}\cmidrule(lr){4-6}
 
-{} &      \parboxc{c}{0.6cm}{(1)} & \parboxc{c}{0.6cm}{(2)} &      \parboxc{c}{0.6cm}{(3)} &      \parboxc{c}{0.6cm}{(4)} &      \parboxc{c}{0.6cm}{(5)} \\
+ & \parboxc{c}{0.6cm}{(1)} & \parboxc{c}{0.6cm}{(2)} & \parboxc{c}{0.6cm}{(3)} & \parboxc{c}{0.6cm}{(4)} & \parboxc{c}{0.6cm}{(5)} \\
 \hline
-main variable   &           \phantom{*}0.297** &      \phantom{*}0.302** &            \phantom{*}0.275* &            \phantom{*}0.275* &            \phantom{*}0.275* \\
-                &           (0.003)\phantom{*} &      (0.001)\phantom{*} &            (0.01)\phantom{*} &            (0.01)\phantom{*} &            (0.01)\phantom{*}\smallskip \\
-D               &                          (-) &        \phantom{*}0.016 &                          (-) &                          (-) &                          (-) \\
-                &                          (-) &                  (0.86) &                          (-) &                          (-) &                          (-)\smallskip \\
-$\gamma$        &            \phantom{*}0.279* &      \phantom{*}0.284** &           \phantom{*}0.288** &           \phantom{*}0.288** &           \phantom{*}0.288** \\
-                &                      (0.011) &      (0.01)\phantom{**} &           (0.01)\phantom{**} &           (0.01)\phantom{**} &           (0.01)\phantom{**}\smallskip \\
-B               &  \phantom{*}0.072\phantom{*} &        \phantom{*}0.058 &  \phantom{*}0.059\phantom{*} &  \phantom{*}0.059\phantom{*} &  \phantom{*}0.059\phantom{*} \\
-                &                      (0.464) &                  (0.56) &                      (0.553) &                      (0.553) &                      (0.553) \\
+main variable & \phantom{*}0.297** & \phantom{*}0.302** & \phantom{*}0.275* & \phantom{*}0.275* & \phantom{*}0.275* \\
+ & (0.003)\phantom{*} & (0.001)\phantom{*} & (0.01)\phantom{*} & (0.01)\phantom{*} & (0.01)\phantom{*}\smallskip \\
+D & (-) & \phantom{*}0.016 & (-) & (-) & (-) \\
+ & (-) & (0.86) & (-) & (-) & (-)\smallskip \\
+$\gamma$ & \phantom{*}0.279* & \phantom{*}0.284** & \phantom{*}0.288** & \phantom{*}0.288** & \phantom{*}0.288** \\
+ & (0.011) & (0.01)\phantom{**} & (0.01)\phantom{**} & (0.01)\phantom{**} & (0.01)\phantom{**}\smallskip \\
+B & \phantom{*}0.072\phantom{*} & \phantom{*}0.058 & \phantom{*}0.059\phantom{*} & \phantom{*}0.059\phantom{*} & \phantom{*}0.059\phantom{*} \\
+ & (0.464) & (0.56) & (0.553) & (0.553) & (0.553) \\
 \smallskip\\
-area FE         &                          Yes &                     Yes &                          Yes &                          Yes &                          Yes \\
-I FE            &                          Yes &                      No &                           No &                          Yes &                          Yes \\
+area FE & Yes & Yes & Yes & Yes & Yes \\
+I FE & Yes & No & No & Yes & Yes \\
 \smallskip\\
-Market controls &                            3 &                       1 &                            5 &                            1 &                            2 \\
+Market controls & 3 & 1 & 5 & 1 & 2 \\
 \smallskip\\
-Observations    &                          100 &                     100 &                          100 &                          100 &                          100 \\
-$R^2$           &                         0.06 &                    0.04 &                         0.03 &                         0.03 &                         0.03 \\
+Observations & 100 & 100 & 100 & 100 & 100 \\
+$R^2$ & 0.060000 & 0.040000 & 0.030000 & 0.030000 & 0.030000 \\
 \hline
 \end{tabular}
