--- a/tex_example/renamed_table.tex
+++ b/tex_example/renamed_table.tex
@@ -4,23 +4,23 @@
 
  \cmidrule(lr){2-3}\cmidrule(lr){4-6}
 
-{} &       \parboxc{c}{0.6cm}{(1)} &       \parboxc{c}{0.6cm}{(2)} & \parboxc{c}{0.6cm}{(3)} & \parboxc{c}{0.6cm}{(4)} & \parboxc{c}{0.6cm}{(5)} \\
+ & \parboxc{c}{0.6cm}{(1)} & \parboxc{c}{0.6cm}{(2)} & \parboxc{c}{0.6cm}{(3)} & \parboxc{c}{0.6cm}{(4)} & \parboxc{c}{0.6cm}{(5)} \\
 \midrule
-main variable   &          \phantom{*}0.2974*** &          \phantom{*}0.3024*** &     \phantom{*}0.2746** &     \phantom{*}0.2746** &     \phantom{*}0.2746** \\
-                &          (3.0797)\phantom{**} &          (3.3618)\phantom{**} &     (2.6245)\phantom{*} &     (2.6245)\phantom{*} &     (2.6245)\phantom{*}\smallskip \\
-D               &                               &  \phantom{*}0.0163\phantom{*} &                         &                         &                         \\
-                &                               &                      (0.1769) &                         &                         &                        \smallskip \\
-$\gamma$        &           \phantom{*}0.2789** &          \phantom{*}0.2842*** &    \phantom{*}0.2878*** &    \phantom{*}0.2878*** &    \phantom{*}0.2878*** \\
-                &           (2.5905)\phantom{*} &          (2.629)\phantom{***} &    (2.6386)\phantom{**} &    (2.6386)\phantom{**} &    (2.6386)\phantom{**}\smallskip \\
-B               &  \phantom{*}0.0724\phantom{*} &  \phantom{*}0.0578\phantom{*} &       \phantom{*}0.0594 &       \phantom{*}0.0594 &       \phantom{*}0.0594 \\
-                &                      (0.7357) &                      (0.5856) &                 (0.595) &                 (0.595) &                 (0.595) \\
+main variable & \phantom{*}0.2974*** & \phantom{*}0.3024*** & \phantom{*}0.2746** & \phantom{*}0.2746** & \phantom{*}0.2746** \\
+ & (0.0966)\phantom{**} & (0.0899)\phantom{**} & (0.1046)\phantom{*} & (0.1046)\phantom{*} & (0.1046)\phantom{*}\smallskip \\
+D &   & \phantom{*}0.0163\phantom{*} &   &   &   \\
+ &   & (0.0924) &   &   &  \smallskip \\
+$\gamma$ & \phantom{*}0.2789** & \phantom{*}0.2842*** & \phantom{*}0.2878*** & \phantom{*}0.2878*** & \phantom{*}0.2878*** \\
+ & (0.1077)\phantom{*} & (0.1081)\phantom{**} & (0.1091)\phantom{**} & (0.1091)\phantom{**} & (0.1091)\phantom{**}\smallskip \\
+B & \phantom{*}0.0724\phantom{*} & \phantom{*}0.0578\phantom{*} & \phantom{*}0.0594\phantom{*} & \phantom{*}0.0594\phantom{*} & \phantom{*}0.0594\phantom{*} \\
+ & (0.0985) & (0.0986) & (0.0999) & (0.0999) & (0.0999) \\
 \medskip\\
-area FE         &                           Yes &                           Yes &                     Yes &                     Yes &                     Yes \\
-I FE            &                           Yes &                            No &                      No &                     Yes &                     Yes \\
+area FE & Yes & Yes & Yes & Yes & Yes \\
+I FE & Yes & No & No & Yes & Yes \\
 \medskip\\
-Market controls &                             3 &                             1 &                       5 &                       1 &                       2 \\
+Market controls & 3 & 1 & 5 & 1 & 2 \\
 \medskip\\
-Observations    &                           100 &                           100 &                     100 &                     100 &                     100 \\
-$R^2$           &                        0.0568 &                        0.0405 &                  0.0328 &                  0.0328 &                  0.0328 \\
+Observations & 100 & 100 & 100 & 100 & 100 \\
+$R^2$ & 0.056800 & 0.040500 & 0.032800 & 0.032800 & 0.032800 \\
 \bottomrule
 \end{tabular}
