--- a/tex_example/bottom_blocks.tex
+++ b/tex_example/bottom_blocks.tex
@@ -4,15 +4,15 @@
 
  \cmidrule(lr){2-4}\cmidrule(lr){5-6}
 
-{} & \parboxc{c}{0.6cm}{(1)} &       \parboxc{c}{0.6cm}{(2)} & \parboxc{c}{0.6cm}{(3)} & \parboxc{c}{0.6cm}{(4)} & \parboxc{c}{0.6cm}{(5)} \\
+ & \parboxc{c}{0.6cm}{(1)} & \parboxc{c}{0.6cm}{(2)} & \parboxc{c}{0.6cm}{(3)} & \parboxc{c}{0.6cm}{(4)} & \parboxc{c}{0.6cm}{(5)} \\
 \midrule
-D               &                         &  \phantom{*}0.0163\phantom{*} &                         &                         &                         \\
-                &                         &                      (0.1769) &                         &                         &                         \\
+D &   & \phantom{*}0.0163\phantom{*} &   &   &   \\
+ &   & (0.0924) &   &   &   \\
 \medskip\\
-area FE         &                     Yes &                           Yes &                     Yes &                     Yes &                     Yes \\
-I FE            &                     Yes &                            No &                      No &                     Yes &                     Yes \\
+area FE & Yes & Yes & Yes & Yes & Yes \\
+I FE & Yes & No & No & Yes & Yes \\
 \medskip\\
-Market controls &                       3 &                             1 &                       5 &                       1 &                       2 \\
-Nb Firm         &                      21 &                            21 &                      21 &                       5 &                       5 \\
+Market controls & 3 & 1 & 5 & 1 & 2 \\
+Nb Firm & 21 & 21 & 21 & 5 & 5 \\
 \bottomrule
 \end{tabular}
