- Added support for PanelOLS - Fixed a bug where show_obs = False has no effect - Fixed a bug where setting bottom_block would replace nobs and r_squared

--- a/tex_example/bottom_blocks.tex
+++ b/tex_example/bottom_blocks.tex
@@ -13,6 +13,10 @@ area FE & Yes & Yes & Yes & Yes & Yes \\
 I FE & Yes & No & No & Yes & Yes \\
 \medskip\\
 Market controls & 3 & 1 & 5 & 1 & 2 \\
+\medskip\\
+Observations & 100 & 100 & 100 & 100 & 100 \\
+$R^2$ & 0.056800 & 0.040500 & 0.032800 & 0.032800 & 0.032800 \\
+\medskip\\
 Nb Firm & 21 & 21 & 21 & 5 & 5 \\
 \bottomrule
 \end{tabular}
